# GO-game

./: .gitignore  CMakeLists.txt
include/GO-game/: Board.hpp  ConsoleView.hpp  Data.hpp  GameEngine.hpp  Player.hpp  go.hpp
src/: Board.cpp  ConsoleView.cpp  GameEngine.cpp  Player.cpp  main.cpp
